# simpler-simple-evals

./: .gitignore  README.md  aime.py  clients.py  example.py  gpqa.py  math500.py  pyproject.toml  requirements.txt
src/simpler_simple_evals/: __init__.py  aime.py  clients.py  gpqa.py  limo.py  math500.py  political.py
